--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ipsa atque, quaerat quibusdam tempora fuga adipisci quia? Soluta laborum quod architecto recusandae, corrupti optio iure aspernatur. Consequatur laboriosam quod vitae!</p>
     </div>
+    <div>
+        <h3>My Second website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ipsa atque, quaerat quibusdam tempora fuga adipisci quia? Soluta laborum quod architecto recusandae, corrupti optio iure aspernatur. Consequatur laboriosam quod vitae!</p>
+    </div>
+    <div>
+        <h3>My Third website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ipsa atque, quaerat quibusdam tempora fuga adipisci quia? Soluta laborum quod architecto recusandae, corrupti optio iure aspernatur. Consequatur laboriosam quod vitae!</p>
+    </div>
 </body>
 </html>
