added a list to push code

--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>My Third website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ipsa atque, quaerat quibusdam tempora fuga adipisci quia? Soluta laborum quod architecto recusandae, corrupti optio iure aspernatur. Consequatur laboriosam quod vitae!</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
