added a butterfly photo

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>Beautiful Butterfly Photo</h3>
+        <img src="images/butterfly.jpg" alt="" height="100%" width="100%">
+    </div>
 </body>
 </html>
